M2/C_v2/slurm-15887939.out
gcc -c -lm -pg -O0 -fopenmp -mavx -std=c99 -g -L/usr/lib64/openmpi/lib -lmpi_cxx -lmpi -I/usr/include/openmpi-x86_64 setup_final.c
setup_final.c:139:5: error: expected identifier or ‘(’ before ‘if’
     if (rank == 0) {
     ^
setup_final.c:143:7: error: expected identifier or ‘(’ before ‘else’
     } else {
       ^
setup_final.c:148:5: warning: data definition has no type or storage class [enabled by default]
     MPI_Finalize();
     ^
setup_final.c:148:5: warning: type defaults to ‘int’ in declaration of ‘MPI_Finalize’ [enabled by default]
setup_final.c:150:5: error: expected identifier or ‘(’ before ‘}’ token
     }
     ^
make: *** [setup_final.o] Error 1
--------------------------------------------------------------------------
[[46030,1],1]: A high-performance Open MPI point-to-point messaging module
was unable to find any relevant network interfaces:

Module: OpenFabrics (openib)
  Host: smp-9-20

Another transport will be used instead, although this may result in
lower performance.
--------------------------------------------------------------------------
[smp-9-19.local:11432] 1 more process has sent help message help-mpi-btl-base.txt / btl:no-nics
[smp-9-19.local:11432] Set MCA parameter "orte_base_help_aggregate" to 0 to see all help / error messages

real	0m0.872s
user	0m0.078s
sys	0m0.069s
